2010-09-25  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15748: BE input validation "time" rejects 0:00 and 24:00 (Thanks to Lars Peipmann)

2010-09-24  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15642: Wrong order of quote and escape in LIKE DB clause (Thanks to Marcus Krause)
	* Fixed bug #5983: Undefined variable is used in t3lib_BEfunc::exec_foreign_table_where_query
	* Fixed bug #15787: Misleading security message in extension manager (Thanks to Marcus Krause)

2010-09-24  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #15653: Only show upload comments that are newer than installed version in update function of EM

2010-09-21  Benjamin Mack  <benni@typo3.org>

	* Fixed #13705: Record info in workspace always shows live version (Thanks to Julia Pardanaud)

2010-09-20  Francois Suter  <francois@typo3.org>

	* Fixed bug #14783: absRefPrefix should work with $TYPO3_CONF_VARS[BE][RTE_imageStorageDir] (thanks to Steffen Mueller)

2010-09-19  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8260: Update Wizard in install tool force temp-configuration files and load configuration twice

2010-09-19  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12964: feedit - EDITPANEL -> "newRecordinPid" doesn't work anymore with feedit (Thanks to Sven Juergens)
	* Fixed bug #3908: DisplayCond => VERSION:IS:false always returns true (Thanks to Daniel Poetzinger)

2010-09-18  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #11415 - Misleading info: No workspaces found!

2010-09-17  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15628: Remove logging when class loading failed in t3lib_autoloader (Thanks to Helmut Hummel)

2010-09-16  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15497: [Caching framework] Remove tagIndex from memcached and apc backend

2010-09-16  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15531: jumpurl check fails if mime type is not known